--- a/accountapp/templates/accountapp/listsnippets/footer.html
+++ b/accountapp/templates/accountapp/listsnippets/footer.html
@@ -40,4 +40,4 @@
         <a href="{% url 'letterapp:search' %}?from=savelist" class="btn-etc material-icons" style="font-size: 2rem">save_as</a>
     {% endif %}
 </div>
-<script src="{% static 'js/showSlide.js' %}"></script>
+<script src="{% static 'js/show.js' %}"></script>
