--- a/letter_infoapp/templates/letter_infoapp/update.html
+++ b/letter_infoapp/templates/letter_infoapp/update.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 {% block content %}
-
+{% load static %}
 <header class="header-empty " >
         {% if target_letter.progress == 'done' %}
         {%  url 'letterapp:result' pk=target_letter.pk as url %}
@@ -18,19 +18,13 @@
         {% include 'snippets/progress.html' %}
         {% endwith %}
         <form class="form-horizontal" action="{% url 'letter_infoapp:update' pk=target_info.pk %}"
-              method="post" {% if target_letter.progress == 'progress1' %} onsubmit="return confirmCreateInfo()" {% endif %}
-              enctype="multipart/form-data">
+              method="post" enctype="multipart/form-data">
         {% csrf_token %}{% bootstrap_form form %}
-        <input type="submit" class="btn-submit-fixed"  value="다음 단계로!">
+        <input {% if target_letter.progress == 'progress1'%}  onclick="confirmAction(event, '이제 편지 내용을 채워볼까요?')"{% endif %} type="submit" class="btn-submit-fixed"  value="다음 단계로!">
         </form>
   </div>
 </main>
 
-<script>
-    function confirmCreateInfo() {
-        var confirmMessage = "이제 편지 내용을 채워볼까요?";
-        return confirm(confirmMessage);
-    }
-</script>
+<script src="{% static 'js/confirm.js' %}"></script>
 {% endblock %}
 
