--- a/letter_quizapp/templates/letter_quizapp/postsnippets/updateheader.html
+++ b/letter_quizapp/templates/letter_quizapp/postsnippets/updateheader.html
@@ -6,7 +6,7 @@
             {% csrf_token %}
             <input style="display:none" type="submit" name="next"
                    value="{% url 'letter_quizapp:list' pk=target_letter.pk %}">
-            <button type="button" onclick="confirmAction('form-delete-quiz', '선택한 질문을 삭제하시겠습니까?')" class="btn-delete-header material-icons">
+            <button type="button" onclick="confirmDelete('form-delete-quiz', '선택한 질문을 삭제하시겠습니까?')" class="btn-delete-header material-icons">
                 delete_forever
             </button>
         </form>
