--- a/letter_quizapp/templates/letter_quizapp/update.html
+++ b/letter_quizapp/templates/letter_quizapp/update.html
@@ -12,6 +12,6 @@
         {% include 'letter_quizapp/postsnippets/date.html' %}
     {% endif %}
 </main>
-<script src="{% static 'js/confirmAction.js' %}"></script>
+<script src="{% static 'js/confirm.js' %}"></script>
 {% endblock %}
 
