--- a/letterapp/templates/letterapp/introsnippets/info.html
+++ b/letterapp/templates/letterapp/introsnippets/info.html
@@ -62,7 +62,7 @@
 </style>
 
 
-<button {% if target_letter.is_locked %} onclick="reloadZoom(1)" {% else %} onclick="showZoom(1)" {% endif %} class="container-snippets container-letter" >
+<button {% if target_letter.is_locked %} onclick="reloadZoom(1)" {% else %} onclick="show(1)" {% endif %} class="container-snippets container-letter" >
     <div class="item-arrow-right"></div>
     <span class="icon-star1 material-icons">grade</span>
     <span class="icon-star2 material-icons">grade</span>
