--- a/letterapp/templates/letterapp/lettersnippets/checkguide.html
+++ b/letterapp/templates/letterapp/lettersnippets/checkguide.html
@@ -36,7 +36,7 @@
     }
 
 </style>
-<button class="btn-guide-untouched material-icons" onclick="showZoom(1)">question_mark</button>
+<button class="btn-guide-untouched material-icons" onclick="show(1)">question_mark</button>
 <button onclick="closeZoom(1)" id="frame-zoom1" class="frame-zoom " style="display: flex; opacity: 1">
     <div class="item-btn"><span class="btn-guide-touched material-icons">question_mark</span></div>
     <div class="container">
@@ -62,4 +62,4 @@
         </div>
     </div>
 </button>
-<script src="{% static 'js/showZoom.js' %}"></script>
+<script src="{% static 'js/show.js' %}"></script>
