--- a/letterapp/templates/letterapp/resultsnippets/navbar.html
+++ b/letterapp/templates/letterapp/resultsnippets/navbar.html
@@ -4,8 +4,8 @@
     {% csrf_token %}
     <input style="display:none" type="submit" name="next"
            value="{% url 'accountapp:writelist' pk=target_letter.writer.pk %}">
-    <button type="button" onclick="confirmAction('form-delete-letter', '현재 편지를 삭제하시겠습니까?')" class="btn-delete material-icons" style="right:6rem;">
+    <button type="button" onclick="confirmDelete('form-delete-letter', '현재 편지를 삭제하시겠습니까?')" class="btn-delete material-icons" style="right:6rem;">
         delete_forever
     </button>
 </form>
-<script src="{% static 'js/confirmAction.js' %}"></script>
+<script src="{% static 'js/confirm.js' %}"></script>
