--- a/letter_contentapp/templates/letter_contentapp/update.html
+++ b/letter_contentapp/templates/letter_contentapp/update.html
@@ -4,26 +4,48 @@
 {% load static %}
 
 <style>
-    #letter_content-create form {
+    #letter_content-update form {
         position: relative;
     }
+    #letter_content-update .item-save {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        flex-direction: row;
+        width: fit-content;
+        position: absolute;
+        right: 1rem;
+        bottom: 7.5rem;
+    }
+    #letter_content-update .btn-save {
+        background: var(--softgray);
+        padding: 0.2rem 0.8rem;
+        width: fit-content;
+        border-radius: 0.5rem;
+       font-weight: var(--fontweight-content);
+        font-size: var(--fontsize-small);
+        color: var(--white);
+    }
+    #letter_content-update .text-saved {
+        margin-right: 0.7rem;
+        color: var(--softgray);
+        font-weight: var(--fontweight-content);
+        font-size: 1.35rem;
+    }
 
-    #letter_content-create #field-content {
+    #letter_content-update #field-content {
         width: 100%;
         height: 20rem;
     }
 
-    #letter_content-create #field-image {
-        width: 100%;
-    }
 
-    #letter_content-create #field-tema {
+    #letter_content-update #field-tema {
         width: 60%;
     }
 
-    #letter_content-create .circle-black,
-    #letter_content-create .circle-gray,
-    #letter_content-create .circle-middle {
+    #letter_content-update .circle-black,
+    #letter_content-update .circle-gray,
+    #letter_content-update .circle-middle {
         border: 1px solid var(--gray);
         position: absolute;
         top: 1.4rem;
@@ -34,28 +56,28 @@
         border-radius: 50%;
     }
 
-    #letter_content-create .circle-black {
+    #letter_content-update .circle-black {
         left: 3.3rem;
         background: var(--black);
     }
 
-    #letter_content-create .circle-middle {
+    #letter_content-update .circle-middle {
         left: 6.3rem;
         background: var(--borderpink);
     }
 
 
     @media screen and (min-width: 800px) {
-        #letter_content-create #field-content{
+        #letter_content-update #field-content{
             height: 19rem;
         }
-        #letter_content-create #field-tema {
+        #letter_content-update #field-tema {
             width: 55%;
         }
     }
 
     @media screen and (min-width: 1100px) {
-        #letter_content-create #field-content{
+        #letter_content-update #field-content{
             height: 18rem;
         }
     }
@@ -76,24 +98,31 @@
 
 
 <main>
-    <div class="frame-letter" id="letter_content-create">
+    <div class="frame-letter" id="letter_content-update">
         {% with progress=2 %}
         {% include 'snippets/progress.html' %}
         {% endwith %}
     
         <form class="form-horizontal" action="{% url 'letter_contentapp:update' pk=target_content.pk %}"
-              method="post" {% if target_letter.progress == 'progress2' %} onsubmit="return confirmCreateContent()" {% endif %}
-              enctype="multipart/form-data">
+              method="post" enctype="multipart/form-data">
         <div class="circle-black"></div>
         <div class="circle-gray"></div>
         <div class="circle-middle"></div>
+        <div class="item-save">
+        {% if target_content.saved_at %}
+        <span class="text-saved">{{ target_content.saved_at|date:"H시 i:s"  }}</span>
+        {% endif %}
+        <input type="submit" class="btn-save" formaction="{% url 'letter_contentapp:save' pk=target_content.pk %}" value="임시 저장" />
+        </div>
         {% csrf_token %}{% bootstrap_form form %}
-        <input type="submit" class="btn-submit-fixed" value="다음 단계로!">
+        <input {% if target_letter.progress == 'progress2' %} onclick="confirmAction(event,'작성을 완료하셨나요? 질문을 설정하세요!')" {% endif %}
+                type="submit" class="btn-submit-fixed" value="다음 단계로!">
         </form>
     </div>
 </main>
 
 <script>
+
     document.addEventListener('DOMContentLoaded', function() {
         var bodyTema = document.getElementById('bodyTema');
         var temaField = document.getElementById('field-tema');
@@ -114,10 +143,7 @@
         });
     });
 
-    function confirmCreateContent() {
-        var confirmMessage = "작성을 완료하셨나요? 질문을 설정하세요!";
-        return confirm(confirmMessage);
-    }
 
 </script>
+<script src="{% static 'js/confirm.js' %}"></script>
 {% endblock %}
