--- a/letter_quizapp/templates/letter_quizapp/listsnippets/submit.html
+++ b/letter_quizapp/templates/letter_quizapp/listsnippets/submit.html
@@ -1,11 +1,11 @@
 {% load static %}
 {% if quizs %}
     {% if not target_letter.progress == 'done' %}
-        <a id="btn-loading1" onclick='startLoading(1, event, "편지 작성을 완료하셨나요? 링크로 공유한 편지는 작성자와 공유받은 사람 둘 만 확인할 수 있어요!")'
-           href="{% url 'letterapp:progressupdate' %}?letter_pk={{ target_letter.pk }}" class="btn-submit-fixed btn-loading">질문 설정 완료</a>
+        <a id="btn-loading1" onclick='showLoading(1, event, "편지 작성을 완료하셨나요? 링크로 공유한 편지는 작성자와 공유받은 사람 둘 만 확인할 수 있어요!")'
+           href="{% url 'letterapp:progressupdate' %}?object_pk={{ target_letter.pk }}" class="btn-submit-fixed btn-loading">질문 설정 완료</a>
 
     {% else %}
-        <a id="btn-loading2" onclick="startLoading(2,event, null)"  href="{% url 'letterapp:result' pk=target_letter.pk %}" class="btn-submit-fixed">
+        <a id="btn-loading2" onclick="showLoading(2,event, null)"  href="{% url 'letterapp:result' pk=target_letter.pk %}" class="btn-submit-fixed">
             편지 수정 완료
         </a>
     {% endif %}
@@ -13,4 +13,4 @@
         <div class="spinner"></div>
     </div>
 {% endif %}
-<script src="{% static 'js/startLoading.js' %}"></script>
+<script src="{% static 'js/show.js' %}"></script>
