--- a/letter_quizapp/templates/letter_quizapp/quizsnippets/question.html
+++ b/letter_quizapp/templates/letter_quizapp/quizsnippets/question.html
@@ -17,16 +17,24 @@
     }
     #letter_quiz-quiz-question .item-questionimage{
         margin-top: 1.5rem;
+        height: fit-content;
+        max-height: 20rem;
+        overflow: hidden;
+        flex-shrink: 0;
         width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         position: relative;
-    }
-    #letter_quiz-quiz-question .image-quiz {
-        width: 100%;
-        height: 15rem;
         object-fit: cover;
         border-radius: var(--border-radius-container);
         border:1.5px solid var(--borderpink);
         box-shadow: var(--shadow-container);
+    }
+    #letter_quiz-quiz-question .image-quiz {
+        flex-shrink: 0;
+        height: auto;
+        width: 100%;
     }
 
     #letter_quiz-quiz-question  .image-click {
@@ -47,7 +55,7 @@
         </span>
     </div>
     {% if target_quiz.image %}
-    <button onclick="showZoom(1)" class="item-questionimage">
+    <button onclick="show(1)" class="item-questionimage">
         <img class="image-quiz" src="{{ target_quiz.image.url }}">
         <img class="image-click" src='/static/icons/etc/click.png'>
     </button>
@@ -59,4 +67,4 @@
     </button>
     {% endif %}
 </div>
-<script src="{% static 'js/showZoom.js' %}"></script>
+<script src="{% static 'js/show.js' %}"></script>
