--- a/letterapp/templates/letterapp/lettersnippets/content.html
+++ b/letterapp/templates/letterapp/lettersnippets/content.html
@@ -27,7 +27,8 @@
     }
     #letter-detail-content .item-letterimage{
         width: 100%;
-        height: 14rem;
+        height: fit-content;
+        max-height: 20rem;
         overflow: hidden;
         margin-bottom: 2rem;
         position: relative;
@@ -38,6 +39,13 @@
         border-radius:var(--border-radius-btn);
         border:1.5px solid #e3e3e3;
         box-shadow:0 3px 13px #e3e3e3;
+        object-fit: cover;
+    }
+    #letter-detail-content .item-letterimage .img{
+        flex-shrink: 0;
+        height: auto;
+        width: 100%;
+
     }
     #letter-detail-content  .image-click{
         width: 2.5rem;
@@ -47,20 +55,6 @@
         right: 1rem;
         bottom: 1rem;
         transform: scaleX(-1);
-    }
-    #letter-detail-content .item-letterimage .img{
-        width: 100%;
-        flex-shrink: 0;
-    }
-    @media screen and (min-width: 800px) {
-        #letter-detail-content .item-letterimage{
-            height: 16rem;
-        }
-    }
-    @media screen and (min-width: 1000px) {
-        #letter-detail-content .item-letterimage{
-            height: 18rem;
-        }
     }
 
 </style>
@@ -72,7 +66,7 @@
     <div class="container">
     <span class="text-title-bold spacing-saver">{{ letter_info.title }}</span>
     {% if letter_content.image %}
-        <button onclick="showZoom(3)" class="item-letterimage">
+        <button onclick="show(3)" class="item-letterimage">
             <img class="img" src="{{ letter_content.image.url }}">
             <img class="image-click" id="image-content" src='/static/icons/etc/click.png'>
         </button>
@@ -92,4 +86,4 @@
     </span>
     </div>
 </div>
-<script src="{% static 'js/showZoom.js' %}"></script>
+<script src="{% static 'js/show.js' %}"></script>
