--- a/letterapp/templates/letterapp/resultsnippets/resetguide.html
+++ b/letterapp/templates/letterapp/resultsnippets/resetguide.html
@@ -16,7 +16,7 @@
 
 
 </style>
-<button onclick="showZoom(1)" class="btn-reset material-icons">lock_reset</button>
+<button onclick="show(1)" class="btn-reset material-icons">lock_reset</button>
 <button onclick="closeZoom(1)" id="frame-zoom1" class="frame-zoom" style="display: flex; opacity: 1;">
     <div class="container">
         <div class="item-exit material-icons">
@@ -33,13 +33,13 @@
             상대방이 편지를 저장하지 않으면 <br>
             {{ target_letter.delete_after }} 편지가 사라져요
         </span>
-        <a href="{% url 'letterapp:reset' %}?letter_pk={{ target_letter.pk }}"  id="btn-loading1"
-           onclick="startLoading(1, event)" class="btn-nav">편지 상태 초기화</a>
+        <a href="{% url 'letterapp:reset' %}?object_pk={{ target_letter.pk }}"  id="btn-loading1"
+           onclick="showLoading(1, event)" class="btn-nav">편지 상태 초기화</a>
     </div>
     <div class="btn-reset material-icons">lock_reset</div>
 </button>
 <div id="loading" class="loading">
     <div class="spinner"></div>
 </div>
-<script src="{% static 'js/showZoom.js' %}"></script>
-<script src="{% static 'js/startLoading.js' %}"></script>
+<script src="{% static 'js/show.js' %}"></script>
+<script src="{% static 'js/show.js' %}"></script>
