--- a/letterapp/templates/letterapp/lettersnippets/content.html
+++ b/letterapp/templates/letterapp/lettersnippets/content.html
@@ -74,6 +74,7 @@
             <div 
                 class="icon-exit material-icons">close
             </div>
+            <a href="{{ letter_content.image.url }}" download class="btn-etc material-icons">download</a>
             <img class="image-zoomed" src="{{ letter_content.image.url }}">
         </button>
     {% endif %}
