--- a/static/css/structure.css
+++ b/static/css/structure.css
@@ -71,19 +71,18 @@ main{
 }
 
 
-@font-face {
-    font-family: 'omyu_pretty';
-    src: url('/static/font/omyupretty.regular') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
 html{
     font-size: 12px;
     color:var(--black);
 }
 
 
+@font-face {
+    font-family: 'omyu_pretty';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-01@1.0/omyu_pretty.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
 body {
     padding-top:var(--height-header);
     background: var(--lightpink);
