--- a/letter_contentapp/templates/letter_contentapp/update.html
+++ b/letter_contentapp/templates/letter_contentapp/update.html
@@ -28,14 +28,15 @@
     }
     #letter_content-update .text-saved {
         margin-right: 0.7rem;
-        color: var(--softgray);
+        color: var(--black);
         font-weight: var(--fontweight-content);
         font-size: 1.35rem;
     }
 
     #letter_content-update #field-content {
         width: 100%;
-        height: 20rem;
+        height: 21rem;
+        padding-bottom: 4rem;
     }
 
 
@@ -69,7 +70,7 @@
 
     @media screen and (min-width: 800px) {
         #letter_content-update #field-content{
-            height: 19rem;
+            height: 20rem;
         }
         #letter_content-update #field-tema {
             width: 55%;
@@ -78,7 +79,7 @@
 
     @media screen and (min-width: 1100px) {
         #letter_content-update #field-content{
-            height: 18rem;
+            height: 19rem;
         }
     }
 </style>
@@ -109,9 +110,6 @@
         <div class="circle-gray"></div>
         <div class="circle-middle"></div>
         <div class="item-save">
-        {% if target_content.saved_at %}
-        <span class="text-saved">{{ target_content.saved_at|date:"H시 i:s"  }}</span>
-        {% endif %}
         <input type="submit" class="btn-save" formaction="{% url 'letter_contentapp:save' pk=target_content.pk %}" value="임시 저장" />
         </div>
         {% csrf_token %}{% bootstrap_form form %}
