--- a/letter_quizapp/templates/letter_quizapp/quizsnippets/question.html
+++ b/letter_quizapp/templates/letter_quizapp/quizsnippets/question.html
@@ -1,7 +1,7 @@
 {% load static %}
 <style>
     #letter_quiz-quiz-question {
-        padding-top:3rem;
+        padding-top:2.5rem;
     }
     #letter_quiz-quiz-question .text-title{
         font-size:  var(--fontsize-title);
@@ -60,9 +60,9 @@
         <img class="image-click" src='/static/icons/etc/click.png'>
     </button>
     <button onclick="closeZoom(1)" id="frame-zoom1" class="frame-zoom">
-        <div
-            class="icon-exit material-icons">close
+        <div class="icon-exit material-icons">close
         </div>
+        <a href="{{ target_quiz.image.url }}" download class="btn-etc material-icons">download</a>
         <img class="image-zoomed" src="{{ target_quiz.image.url }}">
     </button>
     {% endif %}
