--- a/templates/snippets/progress.html
+++ b/templates/snippets/progress.html
@@ -62,7 +62,16 @@
     <span class="text-content">(1/3)</span>
     {% endif %}
     {% if progress == 2 %}
-        <span class="text-content text-detail">내용과 테마를 정해요</span>
+        <span class="text-content text-detail">
+            {% if target_content.saved_at %}
+                저장
+                <span style="font-weight:inherit; font-size: inherit; color: var(--middlepink)">
+                    {{ target_content.saved_at|date:"H:i:s" }}
+                </span>
+            {% else %}
+                편지 내용을 작성해요
+            {% endif %}
+        </span>
         <span class="text-content">(2/3)</span>
     {% endif %}
     {% if progress == 3 %}
