--- a/accountapp/templates/accountapp/setting.html
+++ b/accountapp/templates/accountapp/setting.html
@@ -10,6 +10,7 @@
 
 
 <main id="account-setting">
+    {% include 'accountapp/settingsnippets/info.html' %}
     {% include 'accountapp/settingsnippets/base.html' %}
     {% include 'accountapp/settingsnippets/account.html' %}
 </main>
