--- a/accountapp/templates/accountapp/writelist.html
+++ b/accountapp/templates/accountapp/writelist.html
@@ -14,7 +14,7 @@
     {% include 'accountapp/listsnippets/footer.html' %}
     {% endwith %}
     <div class="frame frame-top">
-        <div class="slide" style="display:block;" id="slide1">
+        <div class="slide" style="display: block" id="slide1">
             {% with letters=letters %}
             {% include 'accountapp/listsnippets/list.html' %}
             {% endwith %}
