--- a/letter_quizapp/templates/letter_quizapp/quizsnippets/question.html
+++ b/letter_quizapp/templates/letter_quizapp/quizsnippets/question.html
@@ -55,7 +55,7 @@
         </span>
     </div>
     {% if target_quiz.image %}
-    <button onclick="show(1)" class="item-questionimage">
+    <button onclick="showZoom(1)" class="item-questionimage">
         <img class="image-quiz" src="{{ target_quiz.image.url }}">
         <img class="image-click" src='/static/icons/etc/click.png'>
     </button>
