--- a/letterapp/templates/letterapp/resultsnippets/resetguide.html
+++ b/letterapp/templates/letterapp/resultsnippets/resetguide.html
@@ -16,7 +16,7 @@
 
 
 </style>
-<button onclick="show(1)" class="btn-reset material-icons">lock_reset</button>
+<button onclick="showZoom(1)" class="btn-reset material-icons">lock_reset</button>
 <button onclick="closeZoom(1)" id="frame-zoom1" class="frame-zoom" style="display: flex; opacity: 1;">
     <div class="container">
         <div class="item-exit material-icons">
