--- a/templates/head.html
+++ b/templates/head.html
@@ -8,7 +8,7 @@
         <meta property="og:description" content="{{ target_letter.letter_info.receiver }}님께 편지가 도착했어요!">
     {% else %}
         <meta property="og:image" content="/static/images/logo.png">
-        <meta property="og:description" content="소중한 사람에게 전달하는 나만의 편지와 퀴즈">
+        <meta property="og:description" content="둘만의 편지와 퀴즈">
     {% endif %}
     <meta property="og:url" content="www.fromxoxo.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
