--- a/letterapp/templates/letterapp/lettersnippets/footer.html
+++ b/letterapp/templates/letterapp/lettersnippets/footer.html
@@ -43,7 +43,7 @@
 
 </style>
 {% if not user.is_authenticated %}
-    <button onclick="show(2)" class="frame-footer">
+    <button onclick="showZoom(2)" class="frame-footer">
         <div class="container-footer">
             <span class="text-title">
                로그인 후 편지 저장!
