--- a/templates/headersnippets/setting.html
+++ b/templates/headersnippets/setting.html
@@ -1,3 +1,3 @@
 
-<a class="material-icons btn-setting" href="{% url 'accountapp:setting' pk=user.pk%}">settings
+<a class="material-icons btn-setting" href="{% url 'accountapp:setting' pk=user.pk%}">account_circle
 </a>
