--- a/accountapp/templates/accountapp/settingsnippets/info.html
+++ b/accountapp/templates/accountapp/settingsnippets/info.html
@@ -12,8 +12,8 @@
     </div>
     <div class="container">
         <div class="spacing-horizontal">
-            <span class="text-content-bold" >{{ user.username }}
-                    <span class="text-content" style="color: var(--black)">님</span>
+            <span class="text-content"  style="color: var(--black)">{{ user.username }}
+                    <span class="text-content-bold">님</span>
                 </span>
             {% include 'accountapp/settingsnippets/iconguide.html' %}
         </div>
